# nlpcraft/src/main/scala/org/apache/nlpcraft/probe/mgrs/model/NCModelManager.scala
@@ -18,6 +18,7 @@
 package org.apache.nlpcraft.probe.mgrs.model
 
 import java.util
+import java.util.concurrent.{ExecutorService, Executors}
 import java.util.regex.{Pattern, PatternSyntaxException}
 
 import io.opencensus.trace.Span
@@ -39,7 +40,9 @@ import scala.collection.convert.DecorateAsScala
 import scala.collection.convert.ImplicitConversions._
 import scala.collection.mutable
 import scala.collection.mutable.ListBuffer
+import scala.concurrent.{ExecutionContext, ExecutionContextExecutor}
 import scala.util.control.Exception._
+import scala.concurrent.ExecutionContext.Implicits.global
 
 /**
   * Model manager.
@@ -125,7 +128,8 @@ object NCModelManager extends NCService with DecorateAsScala {
                         res.suggestions().asScala.foreach(
                             p ⇒ logger.info(s"Validation suggestion [model=$mdlId, inspection=$insId, text=$p")
                         )
-                }(scala.concurrent.ExecutionContext.Implicits.global)
+                    case e: Throwable ⇒ logger.error(s"Error processing inspections: $mdlId", e)
+                }
             }
 
             addTags(
